refactor: improve ClienteService and add financial and order services
- Refactored ClienteService for better readability and method chaining consistency
- Added EstoqueService to handle stock reservation and return logic for orders
- Enhanced ExtratoService with improved transaction registration method
- Introduced PagamentoService for boleto generation and payment validation
- Updated PedidoService to integrate payment creation and stock reservation during order flow
- Added security checks in PedidoService to restrict access to customer-specific orders
- Improved error handling and validation across services
- Extended ProdutoService with category management and stock adjustment features